--- a/cool.css
+++ b/cool.css
@@ -2,7 +2,7 @@
 form {
   border: 3px solid #f1f1f1;
 }
-
+mnxzlknxz
 /* Full-width inputs */
 input[type=text], input[type=password] {
   width: 100%;
